// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <button
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs is rendered with final item as link 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <a
        aria-current="page"
        class="euiLink euiLink--text euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        test
      </a>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Chordates
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
      </span>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        aria-current="false"
        class="euiBreadcrumb__content"
      >
        Tetrapods
      </span>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <button
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Chordates
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
      </span>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        aria-current="false"
        class="euiBreadcrumb__content"
      >
        Tetrapods
      </span>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <button
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <button
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <button
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb"
    >
      <a
        class="euiLink euiLink--subdued euiBreadcrumb__content customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiLink--subdued euiBreadcrumb__content"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb"
    >
      <button
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate"
    >
      <a
        aria-current="false"
        class="euiLink euiLink--subdued euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;
